--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "db:generate": "npx prisma generate",
+    "db:push": "npx prisma db push",
+    "db:studio": "npx prisma studio"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
+    "@prisma/client": "3.14.0",
+    "apollo-server-micro": "^3.8.1",
+    "graphql": "^16.5.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
@@ -16,6 +26,10 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "2.5.1",
+    "@graphql-codegen/typescript-resolvers": "2.6.6",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
@@ -23,6 +37,7 @@
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
