--- a/package.json
+++ b/package.json
@@ -14,12 +14,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.5",
+    "@date-io/moment": "^2.14.0",
+    "@emotion/cache": "^11.9.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.5",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@prisma/client": "3.14.0",
     "apollo-server-micro": "^3.8.1",
     "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "12.1.6",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "next": "^12.2.0",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -39,6 +49,8 @@
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
